--- a/TheVampiress/Items/Item_Wardrobe_ApparelTheVampiressN4.json
+++ b/TheVampiress/Items/Item_Wardrobe_ApparelTheVampiressN4.json
@@ -1,6 +1,6 @@
 {
   "$type": "ThunderRoad.ItemData, Assembly-CSharp",
-  "id": "ApparelTheVampiress",
+  "id": "ApparelTheVampiressN4",
   "saveFolder": "Bas",
   "version": 4,
   "localizationId": null,
@@ -42,7 +42,7 @@
   "modules": [
     {
       "$type": "CustomAvatarFramework.ItemModuleAvatar, CustomAvatarFramework",
-      "avatarItemId": "TheVampiress",
+      "avatarItemId": "TheVampiressN4",
       "avatarHeight": 1.75,
       "playerScaleRatio": 1.0,
       "npcScaleRatio": 1.0,
